--- a/7-typescript-and-the-build-process/7-2-optimizing-typescript-for-production/my-ts-project/package.json
+++ b/7-typescript-and-the-build-process/7-2-optimizing-typescript-for-production/my-ts-project/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "compression-webpack-plugin": "^11.1.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
